Fixed jump-to links

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,8 +13,3 @@ a {
 .input-form {
   position: relative;
 }
-
-/* #calendar {
-  width: 100px;
-  height:100px;
-} */
